# game-engine

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.c
src/game-engine-lib/: CMakeLists.txt  cat.c  cat.h
